--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="MyAppTheme.Base">
+    <style name="MeetStudentsTheme" parent="MeetStudentsTheme.Base">
 
     </style>
 
-    <style name="MyAppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="MeetStudentsTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -23,6 +23,11 @@
 
         <item name="android:windowBackground">@color/colorBackground</item>
 
+    </style>
+
+    <style name="MeetStudentsTheme.Base.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
 </resources>
