--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="color_three">#EC407A</color>
     <color name="color_four">#64DD17</color>
     <color name="color_five">#0094ac</color>
-    <color name="color_six">#00CEEF</color>
+    <color name="color_six">#0ba4bc</color>
 
     <color name="colorBackground">#fff</color>
 
