--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,7 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:textColor="@color/color_five"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
@@ -68,6 +69,7 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textColor="@color/color_five"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
