--- a/app/src/main/res/layout/buttons.xml
+++ b/app/src/main/res/layout/buttons.xml
@@ -6,18 +6,20 @@
     android:layout_marginBottom="20dp"
     android:orientation="horizontal">
 
-    <Button
+    <ImageView
         android:id="@+id/left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:src="@drawable/dislike"
         android:text="Left" />
 
-    <Button
+    <ImageView
         android:id="@+id/right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:src="@drawable/like"
         android:text="Right" />
 
 </LinearLayout>
