--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -24,7 +24,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|start"
             android:layout_margin="10dp"
-            android:text="Erin Gregory, 34" />
+            android:text="Erin Gregory, 34"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="10dp"
+            android:text="3km"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </android.support.v7.widget.CardView>
 
