--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -49,8 +48,8 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:textColor="@color/color_five"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/color_five" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -69,8 +68,8 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:textColor="@color/color_five"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/color_five" />
 
             </android.support.design.widget.TextInputLayout>
 
