--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,43 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_View"
     android:layout_width="match_parent"
     android:layout_height="370dp"
-    android:layout_gravity="center"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    card_view:cardCornerRadius="3dp"
+    card_view:cardElevation="4dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_View"
+    <ImageView
+        android:id="@+id/image_user"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="6dp">
+        android:layout_height="330dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/photo_user" />
 
-        <ImageView
-            android:id="@+id/image_user"
-            android:layout_width="match_parent"
-            android:layout_height="330dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/photo_user" />
+    <TextView
+        android:id="@+id/name_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="10dp"
+        android:text="Erin Gregory, 34"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/name_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|start"
-            android:layout_margin="10dp"
-            android:text="Erin Gregory, 34"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="10dp"
+        android:text="3km"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="10dp"
-            android:text="3km"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </android.support.v7.widget.CardView>
-
-</FrameLayout>
+</android.support.v7.widget.CardView>
