--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="br.com.meetstudents.MainActivity">
 
     <android.support.v7.widget.Toolbar
@@ -23,6 +23,7 @@
         tools:context=".MainActivity" />
 
     <LinearLayout
+        android:id="@+id/buttons_like_and_dislike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/frame"
@@ -49,4 +50,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
