--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,7 @@
 
     <color name="color_background_dialog">#c8050505</color>
 
+    <color name="color_background_message">#ececec</color>
+
 
 </resources>
